--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+# Configuración del servidor
+server.port=8080
+
+# Configuración de la aplicación
+spring.application.name=MiAplicacion
+spring.application.description=Descripción de mi aplicación
+
+# Configuración de los recursos estáticos (por ejemplo, archivos CSS, JS, imágenes)
+spring.web.resources.static-locations=classpath:/static/
